<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UploadAttraction">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <ImageButton
            android:id="@+id/goBack"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/baseline_home_24"
            android:layout_marginStart="300dp"
            android:layout_marginTop="15dp"
            android:contentDescription="TODO" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:background="@drawable/darkblue_border">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_data"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="@color/darkblue"/>

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/uploadphoto"
                android:id="@+id/uploadImage"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                android:layout_gravity="center"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/uploadName"
                android:background="@drawable/darkblue_border"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:hint="@string/enter_name_of_tourist_attraction"
                android:gravity="start|center_vertical"
                android:textColor="@color/darkblue"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/uploadDesc"
                android:background="@drawable/darkblue_border"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:hint="@string/enter_description"
                android:textColor="@color/darkblue"
                android:inputType="textMultiLine"
                android:gravity="top"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/uploadType"
                android:background="@drawable/darkblue_border"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:hint="@string/enter_type"
                android:gravity="start|center_vertical"
                android:textColor="@color/darkblue"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/uploadCity"
                android:background="@drawable/darkblue_border"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:hint="@string/enter_city"
                android:gravity="start|center_vertical"
                android:textColor="@color/darkblue"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/uploadCountry"
                android:background="@drawable/darkblue_border"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:hint="@string/enter_country"
                android:gravity="start|center_vertical"
                android:textColor="@color/darkblue"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/submit2"
                android:id="@+id/submit"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                app:cornerRadius = "20dp"
                android:background="@drawable/roundedbutton"
                android:textAllCaps="false"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>