<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_review"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="399dp"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageUser"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/uploadphoto"
            android:visibility="visible" />

        <TextView
            android:id="@+id/title"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/imageUser"
            android:text="@string/title"
            android:textColor="@color/darkblue"
            android:textSize="20sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/username"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_below="@id/imageUser"
            android:text="@string/username"
            android:textAlignment="center"
            android:textColor="@color/darkblue"
            android:textSize="16sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/description"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="12dp"
            android:layout_toEndOf="@id/imageUser"
            android:maxLines="2"
            android:text="@string/description"
            android:textColor="@color/darkblue"
            android:textSize="15sp"
            android:visibility="visible" />
        
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/description"
            android:layout_marginStart="20dp"
            android:layout_toRightOf="@+id/imageUser"
            android:scrollbars="horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date"
            android:text="@string/date"
            android:layout_toEndOf="@+id/title"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            />


    </RelativeLayout>

</androidx.cardview.widget.CardView>