<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageR"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/uploadphoto"
            android:visibility="visible" />

        <TextView
            android:id="@+id/nameR"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/imageR"
            android:text="@string/nameR"
            android:textColor="@color/darkblue"
            android:textSize="20sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/cityR"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginStart="66dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/nameR"
            android:text="@string/city"
            android:textAlignment="center"
            android:textColor="@color/darkblue"
            android:textSize="16sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/typeR"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameR"
            android:layout_marginStart="20dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="12dp"
            android:layout_toEndOf="@id/imageR"
            android:maxLines="2"
            android:text="@string/typeR"
            android:textColor="@color/darkblue"
            android:textSize="15sp"
            android:visibility="visible" />

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/outline_favorite_border_24"
            android:background="@android:color/transparent"
            android:id="@+id/favoriteButton"
            android:layout_below="@id/cityR"
            android:layout_toEndOf="@id/typeR"
            android:layout_marginStart="66dp"
            android:contentDescription="TODO" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>