<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="E-travel"
            android:textSize="40sp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/babyblue"
            android:textStyle="bold|italic" />

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/map_3271693"
            android:layout_marginTop="0dp"/>
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/register"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/darkblue_border"
            android:layout_marginTop="20dp"
            android:padding="16dp"
            android:gravity="start|center_vertical"
            android:textColor="@color/darkblue"
            android:hint="Enter first name" />
        </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:hint="Enter last name"
            android:layout_height="60dp"
            android:background="@drawable/darkblue_border"
            android:layout_marginTop="20dp"
            android:padding="16dp"
            android:gravity="start|center_vertical"
            android:textColor="@color/darkblue"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:hint="Enter phone number"
            android:layout_height="60dp"
            android:background="@drawable/darkblue_border"
            android:layout_marginTop="20dp"
            android:padding="16dp"
            android:gravity="start|center_vertical"
            android:textColor="@color/darkblue"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:hint="@string/enter_email"
            android:layout_height="60dp"
            android:background="@drawable/darkblue_border"
            android:layout_marginTop="20dp"
            android:padding="16dp"
            android:gravity="start|center_vertical"
            android:textColor="@color/darkblue"/>
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:hint="@string/enter_password"
                android:layout_height="60dp"
                android:background="@drawable/darkblue_border"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:gravity="start|center_vertical"
                android:textColor="@color/darkblue"/>
        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/darkblue_border"
            android:layout_marginTop="20dp"
            android:padding="16dp"
            android:gravity="start|center_vertical"
            android:textColor="@color/darkblue"
            android:hint="Re-enter password" />



        <ImageView
            android:id="@+id/show_hide_pwd"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@id/password"
            android:layout_gravity="center"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/error_while_logging_in"
        android:textColor="@android:color/holo_red_light"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/submit"
        android:background="@drawable/roundedbutton"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/loginNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/login_now"
        android:textSize="15sp"
        android:textStyle="bold" />
    </LinearLayout>
</ScrollView>